compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/NoFieldTypeRef.kt
package test

import java.util.*

public open class NoFieldTypeRef {
    public var foo : String? = ""
}
